--- a/iwdev.dojo.ocr/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
+++ b/iwdev.dojo.ocr/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
@@ -51,8 +51,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BlockToCharsEngine.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="LinesToCharactersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="OcrReader.cs" />
+    <Compile Include="WednesdayTryTests.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
