--- a/iwdev.dojo.ocr/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
+++ b/iwdev.dojo.ocr/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
@@ -50,11 +50,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="BlockToCharsEngine.cs" />
-    <Compile Include="LinesToCharactersTests.cs" />
+    <Compile Include="AccountValidator.cs" />
+    <Compile Include="AccountValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OcrReader.cs" />
-    <Compile Include="WednesdayTryTests.cs" />
+    <Compile Include="OcrReaderTests.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
