--- a/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
+++ b/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
@@ -53,14 +53,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AccountValidator.cs" />
     <Compile Include="AccountValidatorTests.cs" />
-    <Compile Include="ListExtensions.cs" />
-    <Compile Include="StringExtension.cs" />
-    <Compile Include="OcrGuesser.cs" />
     <Compile Include="OcrGuesserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OcrReader.cs" />
     <Compile Include="OcrReaderTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +65,12 @@
     <Content Include="UseCase4.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IwDev.Dojo.Ocr\IwDev.Dojo.Ocr.csproj">
+      <Project>{C56398D5-B5D9-4C34-B8D0-33B298F86FFA}</Project>
+      <Name>IwDev.Dojo.Ocr</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
