--- a/IwDev.Dojo.Ocr.Console/IwDev.Dojo.Ocr.Console.csproj
+++ b/IwDev.Dojo.Ocr.Console/IwDev.Dojo.Ocr.Console.csproj
@@ -54,6 +54,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Sample.txt.txt" />
+    <Content Include="Sample.txt" />
     <Content Include="UseCase4.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
