--- a/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
+++ b/IwDev.Dojo.Ocr.Tests/IwDev.Dojo.Ocr.Tests.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AccountValidatorTests.cs" />
+    <Compile Include="FileGenerator.cs" />
     <Compile Include="OcrGuesserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OcrReaderTests.cs" />
